# RustAPI

./: .env  .env.example  .gitattributes  .gitignore  CHANGED_FILES  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  PROMOTION.md  README.md  RELEASES.md  RELEASE_NOTES.md  RELEASE_v0.1.13.md  SECURITY.md  SOCIAL_MEDIA.md  build_log_2.txt  build_log_3.txt  check_diff.py  check_output.txt  echo.txt  index.html  tasks.md
RustAPI-Cloud/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
RustAPI-Cloud/.cargo/: config.toml
RustAPI-Cloud/deploy/: install.sh  nginx-rustapi-apps.conf  nginx-rustapi-cloud.conf  rustapi-cloud.service
RustAPI-Cloud/fixtures/port-listener/: Cargo.toml
RustAPI-Cloud/fixtures/port-listener/src/: main.rs
RustAPI-Cloud/migrations/: 001_init.sql  002_deploy.sql
RustAPI-Cloud/scripts/: apply-migrations.ps1  run-verification-plan.ps1  verify-e2e.ps1
RustAPI-Cloud/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs  verify_db.rs
RustAPI-Cloud/src/auth/: bearer.rs  device_code.rs  github.rs  jwt.rs  mod.rs
RustAPI-Cloud/src/deploy/: executor.rs  mod.rs  routing.rs  service.rs
RustAPI-Cloud/src/routes/: auth.rs  deploy.rs  mod.rs
RustAPI-Cloud/tests/: bearer_auth.rs  deploy_pipeline.rs
RustAPI-Cloud/tests/common/: mod.rs
benches/bench_server/: Cargo.toml
benches/bench_server/src/: main.rs
crates/cargo-rustapi/: Cargo.toml  README.md
crates/cargo-rustapi/src/: cli.rs  config.rs  main.rs
crates/cargo-rustapi/src/cloud/: mod.rs
crates/cargo-rustapi/src/commands/: bench.rs  client.rs  deploy.rs  deploys.rs  docs.rs  doctor.rs  generate.rs  login.rs  logout.rs  mcp.rs  migrate.rs  mod.rs  new.rs  observability.rs  replay.rs  run.rs  watch.rs  whoami.rs
crates/cargo-rustapi/src/templates/: api.rs  full.rs  minimal.rs  mod.rs  web.rs
crates/cargo-rustapi/tests/: cli_tests.rs
crates/rustapi-agent/: Cargo.toml
crates/rustapi-agent/src/: context.rs  engine.rs  error.rs  lib.rs  planner.rs  replay.rs  step.rs
crates/rustapi-agent/tests/: integration.rs
crates/rustapi-ai/: Cargo.toml
crates/rustapi-ai/src/: lib.rs  middleware.rs  runtime.rs
crates/rustapi-ai/tests/: integration.rs
crates/rustapi-context/: Cargo.toml
crates/rustapi-context/src/: context.rs  cost.rs  error.rs  event.rs  lib.rs  trace.rs
crates/rustapi-context/tests/: integration.rs
crates/rustapi-core/: Cargo.toml  README.md
crates/rustapi-core/examples/: perf_snapshot.rs
crates/rustapi-core/src/: action.rs  app.rs  auto_route.rs  auto_schema.rs  error.rs  events.rs  extract.rs  extract_tests.rs  handler.rs  hateoas.rs  health.rs  http3.rs  interceptor.rs  json.rs  lib.rs  multipart.rs  path_params.rs  path_validation.rs  request.rs  response.rs  router.rs  server.rs  sse.rs  static_files.rs  status.rs  stream.rs  typed_path.rs  validation.rs
crates/rustapi-core/src/app/: builder.rs  config.rs  dispatcher.rs  health.rs  helpers.rs  mod.rs  openapi.rs  production.rs  routing.rs  run.rs  serve_pipeline.rs  tests.rs  types.rs
crates/rustapi-core/src/dashboard/: auth.rs  config.rs  dashboard.html  metrics.rs  mod.rs  routes.rs
crates/rustapi-core/src/extract/: mod.rs
crates/rustapi-core/src/middleware/: body_limit.rs  compression.rs  layer.rs  metrics.rs  mod.rs  request_id.rs  tracing_layer.rs
crates/rustapi-core/src/replay/: config.rs  diff.rs  entry.rs  meta.rs  mod.rs  redaction.rs  store.rs  truncation.rs
crates/rustapi-core/src/router/: conflict.rs  core.rs  match_.rs  method_router.rs  mod.rs  tests.rs
crates/rustapi-core/src/router/tests/: mod.rs  property_early.rs  property_late.rs  unit.rs
crates/rustapi-core/src/testing/: client.rs  mod.rs
crates/rustapi-core/tests/: dashboard_tests.rs  extract.rs  health_endpoints.rs  http3_run_dev.rs  production_defaults.rs  response_streaming.rs  snapshot_test.rs  static_files_security_test.rs  status_page.rs  streaming_test.rs
crates/rustapi-core/tests/support/: extract_lib.rs  router_lib.rs
crates/rustapi-grpc/: Cargo.toml  README.md
crates/rustapi-grpc/src/: lib.rs
crates/rustapi-llm/: Cargo.toml
crates/rustapi-llm/src/: error.rs  lib.rs  provider.rs  router.rs  structured.rs  types.rs
crates/rustapi-llm/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/rustapi-llm/tests/: integration.rs
crates/rustapi-mcp/: Cargo.toml
crates/rustapi-mcp/src/: config.rs  discovery.rs  error.rs  invocation.rs  lib.rs  runner.rs  server.rs  types.rs
crates/rustapi-mcp/tests/: mcp_e2e.rs
crates/rustapi-memory/: Cargo.toml
crates/rustapi-memory/src/: conversation.rs  entry.rs  error.rs  lib.rs  store.rs
crates/rustapi-memory/src/backend/: memory.rs  mod.rs  redis.rs
crates/rustapi-memory/tests/: integration.rs
crates/rustapi-openapi/: Cargo.toml  README.md
crates/rustapi-openapi/src/: doc.rs  lib.rs  redoc.rs  schema.rs  schemas.rs  spec.rs  swagger.rs  tests.rs
crates/rustapi-openapi/src/native/: mod.rs  schema.rs  tests.rs  traits.rs
crates/rustapi-openapi/src/v31/: spec.rs
crates/rustapi-openapi/src/versioning/: router.rs  tests.rs
crates/rustapi-rs/: Cargo.toml  README.md
crates/rustapi-rs/examples/: README.md  auth_api.rs  full_crud_api.rs  jobs_api.rs  mcp_tools.rs  native_openapi_demo.rs  openapi_demo.rs  pins_api.rs  status_demo.rs  streaming_api.rs  typed_path_poc.rs
crates/rustapi-rs/src/: lib.rs
crates/rustapi-rs/tests/: api_error_derive.rs  auto_route.rs  integration_tests.rs  path_param_schema_tests.rs  sprint2_events_test.rs  sprint2_pagination_test.rs  sprint3_hot_reload_test.rs  typed_errors_test.rs  typed_path_derive.rs  validation_tests.rs
crates/rustapi-ssr/: Cargo.toml  build.rs
crates/rustapi-ssr/src/app_router/: mod.rs
crates/rustapi-testing/: Cargo.toml  README.md
crates/rustapi-testing/src/: client.rs  lib.rs  matcher.rs
crates/rustapi-tools/: Cargo.toml
crates/rustapi-tools/src/: error.rs  graph.rs  lib.rs  registry.rs  tool.rs
crates/rustapi-tools/tests/: integration.rs
examples/middleware-chain/: Cargo.toml  README.md
examples/middleware-chain/src/: main.rs
(+459 files in other folders)
