[workspace]
resolver = "2"
members = [
    "crates/rustapi-rs",
    "crates/rustapi-core",
    "crates/rustapi-macros",
    "crates/rustapi-validate",
    "crates/rustapi-openapi",
    "crates/rustapi-extras",
    "crates/rustapi-toon",
    "crates/rustapi-ws",
    "crates/rustapi-view",
    "crates/rustapi-testing",
    "crates/rustapi-jobs",
    "crates/cargo-rustapi",
]

[workspace.package]
version = "0.1.333"
edition = "2021"
authors = ["RustAPI Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tuntii/RustAPI"
homepage = "https://github.com/Tuntii/RustAPI"
documentation = "https://docs.rs/rustapi-rs"
keywords = ["web", "framework", "api", "rest", "http"]
categories = ["web-programming::http-server"]
rust-version = "1.78"

[workspace.dependencies]
# Async runtime
tokio = "1.35"

# HTTP
hyper = "1.1"
hyper-util = "0.1"
http = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Middleware
tower-service = "0.3"

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1.5"
matchit = "0.7"  # Radix tree router
pin-project-lite = "0.2"
async-trait = "0.1"

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
linkme = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Metrics
prometheus = "0.13"

# TOON format
toon-format = { version = "0.4", default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# WebSocket
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# Template engine
tera = "1.19"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.16"

# Internal crates
rustapi-rs = { path = "crates/rustapi-rs", version = "0.1.300", default-features = false }
rustapi-core = { path = "crates/rustapi-core", version = "0.1.300", default-features = false }
rustapi-macros = { path = "crates/rustapi-macros", version = "0.1.300" }
rustapi-validate = { path = "crates/rustapi-validate", version = "0.1.300" }
rustapi-openapi = { path = "crates/rustapi-openapi", version = "0.1.300", default-features = false }
rustapi-extras = { path = "crates/rustapi-extras", version = "0.1.300" }
rustapi-toon = { path = "crates/rustapi-toon", version = "0.1.300" }
rustapi-ws = { path = "crates/rustapi-ws", version = "0.1.300" }
rustapi-view = { path = "crates/rustapi-view", version = "0.1.300" }
rustapi-testing = { path = "crates/rustapi-testing", version = "0.1.300" }
rustapi-jobs = { path = "crates/rustapi-jobs", version = "0.1.300" }

# HTTP/3 (QUIC)
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
rcgen = "0.13"

# ============================================
# Release Profile - Maximum Performance
# ============================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# Benchmark Profile - Even more aggressive
[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1

# Release with debug symbols for profiling
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false







