[package]
name = "rustapi-cloud"
version = "0.1.1"
edition = "2021"
description = "RustAPI Cloud — managed hosting platform for RustAPI framework"
authors = ["Tuntii"]
license = "MIT"

[lib]
name = "rustapi_cloud"
path = "src/lib.rs"

[[bin]]
name = "rustapi-cloud"
path = "src/main.rs"

[[bin]]
name = "mint-verify-jwt"
path = "src/bin/mint-verify-jwt.rs"

[[bin]]
name = "verify-deploy-e2e"
path = "src/bin/verify-deploy-e2e.rs"

[dependencies]
# Framework (dogfooding)
rustapi-rs = { path = "../crates/rustapi-rs" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }

# Auth
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }

# HTTP client (GitHub API)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# URL parsing
url = "2"

# Verification binaries (verify-deploy-e2e pg-embed fallback)
pg-embed = { version = "0.7", features = ["rt_tokio"] }
tokio-postgres = "0.7"

# HTTP types (header map in bearer auth)
http = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1", features = ["v4"] }
http = "1"
bytes = "1"
http-body-util = "0.1"
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
serde_json = "1"
rustapi-core = { path = "../crates/rustapi-core" }
