[package]
name = "rustapi-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustapi-llm"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Model-agnostic LLM router with structured output, function calling, and cost-aware routing for the RustAPI AI Runtime."

[features]
default = []
openai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
local = ["dep:reqwest"]

[dependencies]
rustapi-context = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
futures-util = { workspace = true }
chrono = { workspace = true }

# HTTP client for LLM APIs (feature-gated)
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
