[package]
name = "rustapi-openapi"
description = "OpenAPI/Swagger documentation for RustAPI framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# OpenAPI (internal - not exposed in public API)
utoipa = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
