[package]
name = "rustapi-openapi"
description = "Automated OpenAPI 3.0/3.1 specification generator for RustAPI with native schema generation. Optional Swagger UI and utoipa integration."
documentation = "https://docs.rs/rustapi-openapi"
version.workspace = true
edition.workspace = true 
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core types
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI schema generation (optional - for backward compatibility)
utoipa = { workspace = true, optional = true }

[features]
default = ["swagger-ui", "utoipa"]
swagger-ui = []
redoc = []
# Enable utoipa integration for backward compatibility with #[derive(Schema)]
utoipa = ["dep:utoipa"]
