[package]
name = "rustapi-openapi"
description = "Native OpenAPI 3.1 specification generator for RustAPI. Integrates Swagger UI."
documentation = "https://docs.rs/rustapi-openapi"
version.workspace = true
edition.workspace = true 
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core types
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Macros
rustapi-macros = { path = "../rustapi-macros", version = "0.1.188" }

[features]
default = ["swagger-ui"]
swagger-ui = []
redoc = []
