[package]
name = "rustapi-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustapi-testing"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Testing utilities for RustAPI applications. Provides checking helpers, test servers, and fluid assertions."

[dependencies]
tokio = { workspace = true, features = ["macros", "net", "rt", "sync"] }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["http1", "server-auto", "tokio"] }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustapi-core = { workspace = true }

[dev-dependencies]
proptest = "1.8.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

